apps/common/pi-temp-agent/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pi-temp-agent
  namespace: pi-temp
  labels:
    app: pi-temp-agent
spec:
  selector:
    matchLabels:
      app: pi-temp-agent
  template:
    metadata:
      labels:
        app: pi-temp-agent
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: pi-temp-agent
        image: mthorley/pi-temp-agent:latest
        ports:
        - containerPort: 5000
