apps/common/pi-temp-agent/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-temp-public
  namespace: pi-temp
spec:
  selector:
    app: pi-temp-agent
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
  loadBalancerIP: "${pi_temp_agent_ip}"
