apps/common/pi-temp-agent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-temp-headless
  namespace: pi-temp
spec:
  selector:
    app: pi-temp-agent
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
